# dagster

.github/workflows/: build-docs.yml
docs/: vercel.json
docs/docs/examples/: ra-etl-reverse-etl.md  ra-rag.md  ra-real-time.md
docs/docs/examples/bluesky/: dashboard.md  index.md  ingestion.md  modeling.md  rate-limiting.md
docs/docs/examples/llm-fine-tuning/: feature-engineering.md  file-creation.md  index.md  ingestion.md  model-validation.md  open-ai-job.md
docs/docs/examples/modal/: index.md
docs/docs/examples/prompt-engineering/: additional-prompt.md  custom-resource.md  index.md  prompts.md
docs/docs/examples/rag/: embeddings.md  index.md  sources.md
docs/docs/guides/automate/: index.md
docs/scripts/: build-api-docs.sh  build-kinds-tags.sh
examples/docs_projects/project_ask_ai_dagster/: pyproject.toml  setup.py
examples/docs_projects/project_ask_ai_dagster/project_ask_ai_dagster/: definitions.py
examples/docs_projects/project_ask_ai_dagster/project_ask_ai_dagster/defs/: io_manager.py
examples/docs_projects/project_ask_ai_dagster/project_ask_ai_dagster/defs/resources/: github.py  openai.py  pinecone.py  scraper.py
examples/docs_projects/project_ask_ai_dagster/project_ask_ai_dagster_tests/: test_defs.py
examples/docs_projects/project_atproto_dashboard/: pyproject.toml  setup.py
examples/docs_projects/project_atproto_dashboard/project_atproto_dashboard/: definitions.py
examples/docs_projects/project_atproto_dashboard/project_atproto_dashboard/defs/dashboard/: definitions.py
examples/docs_projects/project_atproto_dashboard/project_atproto_dashboard/defs/ingestion/: definitions.py
examples/docs_projects/project_atproto_dashboard/project_atproto_dashboard/defs/modeling/: definitions.py
examples/docs_projects/project_atproto_dashboard/project_atproto_dashboard_tests/: test_defs.py
examples/docs_projects/project_dagster_modal_pipes/: pyproject.toml
examples/docs_projects/project_dagster_modal_pipes/project_dagster_modal_pipes/: definitions.py
examples/docs_projects/project_dagster_modal_pipes/project_dagster_modal_pipes/defs/: pipeline_factory.py  resources.py
examples/docs_projects/project_dagster_modal_pipes/project_dagster_modal_pipes/defs/utils/: __init__.py
examples/docs_projects/project_dagster_modal_pipes/project_dagster_modal_pipes_tests/: test_defs.py
examples/docs_projects/project_llm_fine_tune/: pyproject.toml
examples/docs_projects/project_llm_fine_tune/project_llm_fine_tune/defs/: assets.py
examples/docs_projects/project_llm_fine_tune/project_llm_fine_tune_tests/: test_defs.py
examples/docs_projects/project_prompt_eng/: pyproject.toml  setup.py
examples/docs_projects/project_prompt_eng/project_prompt_eng/: definitions.py
examples/docs_projects/project_prompt_eng/project_prompt_eng_tests/: test_defs.py
python_modules/dagster/dagster/_cli/: api.py  code_server.py  proxy_server_manager.py
python_modules/libraries/create-dg/: MANIFEST.in  setup.cfg  setup.py  tox.ini
python_modules/libraries/create-dg-app/: MANIFEST.in  setup.cfg  setup.py  tox.ini
python_modules/libraries/dagster-fivetran/: tox.ini
scripts/: install_dev_python_modules.py
(+51 files in other folders)
