[project]
name = "project-ask-ai-dagster"
version = "0.1.0"
description = "Project Ask AI"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "langchain",
    "langchain-core",
    "gql",
    "python-dotenv",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "dagster==1.10.9",
    "dagster-webserver",
    "dagster-openai",
    "dagster_duckdb",
    "chromadb",
    "tokenizers",
    "tenacity",
    "tqdm",
    "bs4",
    "lxml",
    "openai",
    "pinecone",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.8.4",
    "pytest",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_prompt_eng"
code_location_target_module = "project_ask_ai_dagster.definitions"
