[project]
name = "project-atproto-dashboard"
version = "0.0.1"
description = "Project Bluesky"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.9",
    "dagster-aws",
    "dagster-dbt",
    "dagster-duckdb",
    "dagster-powerbi",
    "dbt-duckdb",
    "tenacity",
    "atproto",
]

[tool.uv]
dev-dependencies = [
    "dagster-webserver",
    "pytest",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_atproto_dashboard"
code_location_target_module = "project_atproto_dashboard.definitions"
