[project]
name = "project-dagster-modal-pipes"
version = "0.0.1"
description = "Project Modal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.10.9",
    "dagster-aws",
    "dagster-modal>=0.0.2",
    "dagster-openai",
    "feedparser",
    "ffmpeg-python",
    "modal",
    "openai",
    "tiktoken",
    "yagmail",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.8.4",
    "pytest",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_dagster_modal_pipes"
code_location_target_module = "project_dagster_modal_pipes.definitions"
