[project]
name = "project-llm-fine-tune"
version = "0.0.1"
description = "Project LLM Fine Tune"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.10.9",
    "dagster-openai",
    "dagster-duckdb",
    "pandas",
    "openai",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.8.4",
    "pytest",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_llm_fine_tune"
code_location_target_module = "project_llm_fine_tune.definitions"